--- a/style.css
+++ b/style.css
@@ -1,9 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
 /* Main Index Page Style */
 
 body {
     background-color: #fafafa;
+    font-family: 'Poppins', sans-serif;
 }
-
+nav {
+    border-bottom: 1px solid #dadada;
+}
+.nav-menu{
+    font-weight: 500;
+    font-size: 18px;
+}
+.logo{
+    font-weight: 600;
+    font-size: 25px;
+    /* text-transform: uppercase; */
+}
 ul {
     list-style: none;
 }
@@ -23,6 +37,7 @@ a {
 
 #categories {
     font-size: 20px;
+    font-weight: 500;
 }
 
 .post-img {
@@ -51,9 +66,6 @@ a {
     height: 170px;
 }
 
-nav {
-    border-bottom: 1px solid #dadada;
-}
 .icon{
     /* display: inline-block; */
     font-size: 21px;
@@ -75,6 +87,10 @@ nav {
 }
 
 @media screen and (max-width: 576px) {
+    .container{
+        max-width: 100%;
+        padding: 0 25px;
+    }
     #categories{
         display: flex;
         flex-direction: column;
@@ -88,12 +104,8 @@ nav {
         text-align: center;
         margin-bottom: 10px;
     }
-    .buttons{
-        /* display: inline-block; */
-        /* display: flex; */
-        /* justify-content: flex-start; */
-        /* text-align: center; */
-        padding-right: 100px;
+    .buttons .btn-primary, .buttons .btn-outline-primary{
+        display: none;
     }
     .thumb-img{
         width: 100%;
