--- a/style.css
+++ b/style.css
@@ -1,30 +1,27 @@
+/* Google Font */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
-
-/* Main Index Page Style */
-
+/* Custom Styles */
 body {
     background-color: #fafafa;
     font-family: 'Poppins', sans-serif;
 }
+ul {
+    list-style: none;
+}
+a {
+    text-decoration: none;
+    color: #000;
+}
 nav {
     border-bottom: 1px solid #dadada;
+}
+.logo {
+    font-weight: 600;
+    font-size: 25px;
 }
 .nav-menu{
     font-weight: 500;
     font-size: 18px;
-}
-.logo{
-    font-weight: 600;
-    font-size: 25px;
-    /* text-transform: uppercase; */
-}
-ul {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
-    color: #000;
 }
 
 .card-style {
@@ -34,17 +31,14 @@ a {
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
 }
-
 #categories {
     font-size: 20px;
     font-weight: 500;
 }
-
 .post-img {
     width: 50px;
     border-radius: 50%;
 }
-
 .details {
     height: 100px;
     overflow: hidden;
@@ -52,46 +46,28 @@ a {
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
 }
-
 .input-field {
     outline: none;
     border: none;
     width: 80px;
     font-size: 16px;
 }
-
 .thumb-img {
     /* display: inline-block; */
     width: 200px;
     height: 170px;
 }
-
 .icon{
-    /* display: inline-block; */
     font-size: 21px;
-    /* margin-top: 30px; */
 }
 
-/* Blog Page Style */
-
-body {
-    background-color: #fafafa;
-}
-
-nav {
-    border-bottom: 1px solid #dadada;
-}
-
-.card-height {
-    height: 660px;
-}
 
 @media screen and (max-width: 576px) {
     .container{
         max-width: 100%;
         padding: 0 25px;
     }
-    #categories{
+    #categories {
         display: flex;
         flex-direction: column;
         background: rgb(228, 228, 228);
@@ -104,7 +80,7 @@ nav {
         text-align: center;
         margin-bottom: 10px;
     }
-    .buttons .btn-primary, .buttons .btn-outline-primary{
+    .buttons .btn-primary, .buttons .btn-outline-primary {
         display: none;
     }
     .thumb-img{
